cluster/infrastructure/longhorn/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-longhorn-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
