cluster/infrastructure/longhorn/ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  entryPoints: 
    - websecure
  routes:
  - kind: Rule
    match: Host(`longhorn.devantler.com`) 
    services:
    - name: longhorn-frontend
      port: 8000
  tls: 
    secretName: tls-certificate-production
